src/test/deca/context/invalid/rvalue_assign_bool_to_int_in_class.deca
// Test la règle 3.28: on ne peut pas affecter à un objet de type int 
// une valeur d'un objet de type float. 

class A  {
    boolean b = true;
    int x = b;
}

// Resultat:
//TODOTEST
